--- a/components/ButtonContainer/ButtonContainer.module.css
+++ b/components/ButtonContainer/ButtonContainer.module.css
@@ -5,11 +5,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 24px;
+  padding: 0 24px 5px 24px;
 }
 
 @media screen and (min-width: 1024px) {
   .buttonContainer {
-    padding: 0 40px;
+    padding: 0 40px 10px 40px ;
   }
 }
