--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -9,21 +9,26 @@
   background: #AD1FEA;
   color: #F2F4FE;
   border-radius: 10px;
+  margin-right: 10px;
 }
 
 .button:hover {
   background: #C75AF6;
 }
 
-/* Variants */
-
-/* Close */
-.button_close {
-  background: #3A4374;
+.button:last-child {
+  margin-right: 0;
 }
 
-.button_close:hover {
-  background: #656EA3;
+/* Variants */
+
+/* Edit */
+.button_edit {
+  background: #4661E6;
+}
+
+.button_edit:hover {
+  background: #7C91F9;
 }
 
 /* Delete */
