--- a/components/ButtonContainer/ButtonContainer.module.css
+++ b/components/ButtonContainer/ButtonContainer.module.css
@@ -1,16 +1,14 @@
 .buttonContainer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 24px 5px 24px;
+  padding-bottom: 16px;
 }
 
-@media screen and (min-width: 1024px) {
+/* .buttonContainer:last-of-type {
+  padding-bottom: 0;
+} */
+
+@media screen and (min-width: 768px) {
   .buttonContainer {
-    padding: 0 40px 10px 40px ;
+    /* width: 140px; */
   }
 }
-
