--- a/components/Container/Container.module.css
+++ b/components/Container/Container.module.css
@@ -1,4 +1,16 @@
 .container {
+  /* position: absolute;
+  bottom: 0; */
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
   justify-content: space-between;
+  /* padding: 0 24px 5px 24px; */
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    padding: 0 40px 10px 40px ;
+  }
 }
