--- a/components/Container/Container.module.css
+++ b/components/Container/Container.module.css
@@ -1,16 +1,14 @@
 .container {
-  /* position: absolute;
-  bottom: 0; */
   display: flex;
   flex-direction: column;
+  gap: 16px;
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  /* padding: 0 24px 5px 24px; */
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .container {
-    padding: 0 40px 10px 40px ;
+    flex-direction: row;
   }
 }
