--- a/components/ButtonContainer/ButtonContainer.module.css
+++ b/components/ButtonContainer/ButtonContainer.module.css
@@ -1,5 +1,6 @@
 .buttonContainer {
-  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 768px) {
