--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -58,3 +58,10 @@
     line-height: 20px;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .button {
+    font-size: 18px;
+    line-height: 26px;
+  }
+}
