--- a/components/Title/Title.module.css
+++ b/components/Title/Title.module.css
@@ -14,3 +14,10 @@
     letter-spacing: -0.333333px;
   }
 }
+
+@media screen and (min-width: 2560px) {
+  .title {
+    font-size: 30px;
+    line-height: 44px;
+  }
+}
