--- a/components/AddingTask/AddingTask.module.css
+++ b/components/AddingTask/AddingTask.module.css
@@ -2,6 +2,7 @@
   display: grid;
   gap: 16px;
   width: 80%;
+  max-width: 700px;
   background-color: #FFFFFF;
   border-radius: 10px;
   position: relative;
