--- a/components/Form/Form.module.css
+++ b/components/Form/Form.module.css
@@ -1,4 +1,12 @@
 .form {
   background-color: #FFFFFF;
   border-radius: 10px;
+  display: grid;
+  gap: 16px; 
+}
+
+@media screen and (min-width: 768px) {
+  .form {
+    gap: 20px;
+  }
 }
