--- a/components/TaskCard/TaskCard.module.css
+++ b/components/TaskCard/TaskCard.module.css
@@ -3,6 +3,7 @@
   gap: 16px;
   background: #FFFFFF;
   width: 80%;
+  max-width: 700px;
   min-height: 175px;
   border-radius: 10px;
   margin: 24px 32px 24px 16px;
