--- a/components/LogoImageContainer/LogoImageContainer.module.css
+++ b/components/LogoImageContainer/LogoImageContainer.module.css
@@ -1,4 +1,4 @@
-.imageContainer {
+.logoImageContainer {
   position: absolute;
   top: -20px;
   left: 24px;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .imageContainer {
+  .logoImageContainer {
     width: 56px;
     height: 56px;
     top: -28px;
