--- a/components/ButtonContainer/ButtonContainer.module.css
+++ b/components/ButtonContainer/ButtonContainer.module.css
@@ -1,10 +1,14 @@
 .buttonContainer {
   display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+  align-items: center;
   justify-content: space-between;
 }
 
 @media screen and (min-width: 768px) {
   .buttonContainer {
-    /* width: 140px; */
+    flex-direction: row;
   }
 }
