Display sorted years and goals

--- a/components/TimelineContainer/TimelineContainer.module.css
+++ b/components/TimelineContainer/TimelineContainer.module.css
@@ -1,14 +1,29 @@
 .timelineContainer {
-  display: flex;
-  flex-direction: column;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;  
   gap: 16px;
   width: 100%;
-  align-items: center;
+  align-items: top;
   justify-content: space-between;
 }
 
 @media screen and (min-width: 768px) {
   .timelineContainer {
-    flex-direction: row;
+    grid-template-columns: 1fr 1fr; 
+    gap: 20px;
+    padding-left: 100px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .timelineContainer {
+    grid-template-columns: repeat(3, 1fr); 
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .timelineContainer {
+    grid-template-columns: repeat(4, 1fr); 
   }
 }
