--- a/components/Container/Container.module.css
+++ b/components/Container/Container.module.css
@@ -9,7 +9,8 @@
 
 @media screen and (min-width: 768px) {
   .container {
-    flex-direction: row;
+    /* flex-direction: row; */
     justify-content: flex-end;
+    align-items: flex-start;
   }
 }
