--- a/components/Subtitle/Subtitle.module.css
+++ b/components/Subtitle/Subtitle.module.css
@@ -8,6 +8,10 @@
   color: #3A4374;
 }
 
+.subtitle_ellipsis {
+  text-overflow: ellipsis;
+}
+
 @media screen and (min-width: 768px) {
   .subtitle {
     font-size: 14px;
