--- a/components/Timeline/Timeline.module.css
+++ b/components/Timeline/Timeline.module.css
@@ -5,3 +5,9 @@
   background: #ffffff;
   border-radius: 10px;
 }
+
+@media screen and (min-width: 768px) {
+  .year {
+    position: absolute;
+  }
+}
