--- a/components/FormImageContainer/FormImageContainer.module.css
+++ b/components/FormImageContainer/FormImageContainer.module.css
@@ -1,4 +1,4 @@
-.logoImageContainer {
+.formImageContainer {
   position: absolute;
   top: -20px;
   left: 24px;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .logoImageContainer {
+  .formImageContainer {
     width: 56px;
     height: 56px;
     top: -28px;
