--- a/components/TaskCard/TaskCard.module.css
+++ b/components/TaskCard/TaskCard.module.css
@@ -2,21 +2,21 @@
   display: grid;
   gap: 16px;
   background: #FFFFFF;
-  width: 100%;
-  max-width: 700px;
+  /* width: 100%; */
+  /* max-width: 700px; */
   min-height: 175px;
   border-radius: 10px; 
 }
 
 @media screen and (min-width: 768px) {
   .taskCard {
-    width: 80%;
+    /* width: 80%; */
     gap: 20px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .taskCard {
-    width: 60%;
+    /* width: 60%; */
   }
 }
