--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,3 +14,19 @@
   min-height: 100vh;
 }
 
+.taskCardLink {
+  width: 100%;
+  max-width: 700px;
+}
+
+@media screen and (min-width: 768px) {
+  .taskCardLink {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .taskCardLink {
+    width: 60%;
+  }
+}
