--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,11 @@ body {
   padding: 24px;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 @media screen and (min-width: 768px) {
   .p-s {
     padding: 24px;
