--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,14 +12,9 @@
 
 html,
 body {
+  background-color: #f7f8fd;
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 .p-s {
