--- a/components/AddingTask/AddingTask.module.css
+++ b/components/AddingTask/AddingTask.module.css
@@ -3,12 +3,13 @@
   gap: 16px;
   width: 100%;
   max-width: 700px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 10px;
   position: relative;
+  margin-top: 40px;
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .addingTask {
     width: 80%;
     gap: 20px;
@@ -17,6 +18,6 @@
 
 @media screen and (min-width: 1024px) {
   .addingTask {
-    width: 60%;
+    width: 40%;
   }
-}
+} */
