--- a/components/Container/Container.module.css
+++ b/components/Container/Container.module.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   gap: 16px;
   width: 100%;
   align-items: center;
