--- a/components/TaskCard/TaskCard.module.css
+++ b/components/TaskCard/TaskCard.module.css
@@ -1,22 +1,18 @@
 .taskCard {
   display: grid;
   gap: 16px;
-  background: #FFFFFF;
-  /* width: 100%; */
-  /* max-width: 700px; */
+  background: #ffffff;
   min-height: 175px;
-  border-radius: 10px; 
+  border-radius: 10px;
+  width: 100%;
+}
+
+.taskCard:hover {
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
   .taskCard {
-    /* width: 80%; */
     gap: 20px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .taskCard {
-    /* width: 60%; */
   }
 }
